# nautilus-exiftool

./: LICENSE  README.md  install.sh  pyproject.toml  pyprojecte.toml
.github/workflows/: python-package.yml
nautilus_exiftool/: nautilus_exiftool.py
