[project]
name = "nautilus_exiftool"
version = "0.1.1"
description = "an extension for nautilus/caja, which adds all exif metadata from files"
authors = [
    {name = "Rémi Germain", email = "contact@germainremi.fr"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
keywords = [ "nautilus", "extension", "exif", "exiftool", "metadata", "gnome"]

license = "MIT"
license-files = [
    "LICENSE",
]

[tool.setuptools]
py-modules = ["nautilus_exiftool"]

[tool.setuptools.data-files]
"share/nautilus-python/extensions" = ["nautilus_exiftool/nautilus_exiftool.py"]
"share/caja-python/extensions" = ["nautilus_exiftool/nautilus_exiftool.py"]